--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss","bootspraint/bootstrap.min.css","node_modules/aos/dist/aos.css"],
+              "src/styles.scss","bootspraint/bootstrap.min.css",
+              "node_modules/aos/dist/aos.css",
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/aos/dist/aos.css"],
             
             "scripts": ["bootspraint/jquery.slim.min.js",
               "bootspraint/popper.min.js",
